V2.2.0 (in development)
    - TDQ-11491 API for Reservoir Sampling component on Spark
	- TDQ-10917 TDQ-11108 TDQ-11448 fix junits

V2.1.5 2015-12-30
    - move to data-quality repository, change parent pom

v2.1.4 zshen 2015-11-26
    - TDQ-11187 use BufferedReader instead of Scanner and remove parameter keyDelimiter from method KeysLoader.loadKeys

V2.1.3 sizhaoliu 2015-11-19
    - TDQ-11292 use index instead of header to retrieve sample data

V2.1.2 mzhao 2015-11-13 
    - TDQ-11187 use line separator depending on system

V2.1.1 sizhaoliu 2015-10-22 (for Studio 6.1.0)
    - TDQ-11108 absolute paths issue in junits
    - TDQ-11109 soundex replace junit failure
    - TDQ-11046 problem when masking null values

V2.1.0 Julien GONZALEZ 2015-09-15 (TDQ-10456)
    - Creating new GenerateSequence function
    - Removing the logical implementation from the javajet
    
V2.0.0 sizhaoliu 2015-09-10 (TDQ-10888)
    - Code refactoring
    - New system for artifact build

V1.3.0 Julien GONZALEZ 2015-08-24
    - Adding HellWeek Suggestions

V1.2.0 Julien GONZALEZ 2015-06-25
    - Implementing factory pattern

V1.1.0 Julien GONZALEZ 2015-06-12
    - Adding new functions + Code cleansing

V1.0.1 Julien GONZALEZ 2015-04-03
    - API for DataMasker