@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry excluding="org/talend/dataquality/sampling/SparkSamplingUtil.java" including="**/*.java" kind="src" path="src/main/java"/>
-	<classpathentry excluding="org/talend/dataquality/sampling/SparkSamplingUtilTest.java" including="**/*.java" kind="src" output="target/classes" path="src/test/java"/>
+	<classpathentry excluding="org/talend/dataquality/sampling/parallel/SparkSamplingUtil.java" including="**/*.java" kind="src" path="src/main/java"/>
+	<classpathentry excluding="org/talend/dataquality/sampling/parallel/SparkSamplingUtilTest.java" including="**/*.java" kind="src" output="target/classes" path="src/test/java"/>
 	<classpathentry excluding="**/*.java" kind="src" output="target/classes" path="src/test/resources"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
